add inline cite links up to discussion

--- a/manuscript/lagosag.bib
+++ b/manuscript/lagosag.bib
@@ -1985,6 +1985,14 @@
   language = {en}
 }
 
+@techreport{soil2016gridded,
+  title = {Gridded Soil Survey Geographic ({{gSSURGO}}) Database for the Conterminous United States},
+  author = {{Soil Survey Staff}},
+  year = {2016},
+  institution = {{United States Department of Agriculture, Natural Resources Conservation Service}},
+  url = {https://gdg.sc.egov.usda.gov/}
+}
+
 @article{sondergaardPersistentInternalPhosphorus2013,
   title = {Persistent Internal Phosphorus Loading during Summer in Shallow Eutrophic Lakes},
   author = {S{\o}ndergaard, Martin and Bjerring, Rikke and Jeppesen, Erik},
@@ -2117,9 +2125,18 @@
   journal = {Limnology and Oceanography}
 }
 
-@book{stachelekNhdRToolsWorking,
+@book{stachelekGssurgoPythonToolbox2019,
+  title = {Gssurgo: {{Python}} Toolbox Enabling an Open Source {{gSSURGO}} Workflow},
+  author = {Stachelek, Joseph},
+  year = {2019},
+  url = {https://github.com/jsta/gssurgo},
+  note = {Python toolbox version 1.0.0}
+}
+
+@book{stachelekNhdRToolsWorking2019,
   title = {{{nhdR}}: Tools for Working with the National Hydrography Dataset},
   author = {Stachelek, Joseph},
+  year = {2019},
   url = {https://github.com/jsta/nhdR}
 }
 
@@ -2211,6 +2228,12 @@
   keywords = {used}
 }
 
+@techreport{usgsNationalHydrographyDataset2019,
+  title = {National Hydrography {{Dataset}}},
+  author = {USGS},
+  year = {2019}
+}
+
 @article{vanderhorstAssessingEfficiencyGains2007,
   title = {Assessing the Efficiency Gains of Improved Spatial Targeting of Policy Interventions; the Example of an Agri-Environmental Scheme},
   author = {{van der Horst}, Dan},
@@ -2254,6 +2277,17 @@
   journal = {Freshwater Biology},
   keywords = {need to read},
   language = {en},
+  number = {5}
+}
+
+@article{vehtari2017practical,
+  title = {Practical {{Bayesian}} Model Evaluation Using Leave-One-out Cross-Validation and {{WAIC}}},
+  author = {Vehtari, Aki and Gelman, Andrew and Gabry, Jonah},
+  year = {2017},
+  volume = {27},
+  pages = {1413--1432},
+  publisher = {{Springer}},
+  journal = {Statistics and computing},
   number = {5}
 }
 
