--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -56,7 +56,7 @@ abstract: |
 
 # Optional: Acknowledgements
 acknowledgements: |
-  This work was supported by the U.S. National Science Foundation’s Dynamics of Coupled Natural and Human Systems (CNH) Program (award 1517823) and Macrosystems Biology Program (awards EF-1638679, EF-1638554, EF-1638539, and EF-1638550). PAS was also supported by the USDA National Institute of Food and Agriculture, Hatch project 1013544. ARK supported by Hatch Appropriations under Project #PEN04571 and Accession #1003346. We thank Sarah Collins for early input on the design and motivation for this study. Any use of trade, firm, or product names is for descriptive purposes only and does not imply endorsement by the U.S. Government. Author contributions: JS conceived of the study, built models, analyzed data, and wrote the paper. CCC, ARK, and PAS contributed to the conception of the manuscript and edited the paper. WW, KMC, TW, KCW, and PAS provided interpretation of results and edited the paper.
+  This work was supported by the U.S. National Science Foundation’s Dynamics of Coupled Natural and Human Systems (CNH) Program (award 1517823) and Macrosystems Biology Program (awards EF-1638679, EF-1638554, EF-1638539, and EF-1638550). PAS was also supported by the USDA National Institute of Food and Agriculture, Hatch project 1013544. ARK was supported by Hatch Appropriations under Project #PEN04571 and Accession #1003346. We thank Sarah Collins for early input on the design and motivation for this study. Any use of trade, firm, or product names is for descriptive purposes only and does not imply endorsement by the U.S. Government. Author contributions: JS conceived of the study, built models, analyzed data, and wrote the paper. CCC, ARK, and PAS contributed to the conception of the manuscript and edited the paper. WW, KMC, TW, KCW, and PAS provided interpretation of results and edited the paper.
 
 # Optional: One or more keywords
 keywords:
@@ -147,16 +147,16 @@ We addressed the knowledge gaps described above by asking two questions using da
 
 ### Data description
 
-We analyzed data on lake total nitrogen (TN) and total phosphorus (TP) concentrations from the LAGOS-NE data product (Soranno and Cheruvelil 2017). The LAGOS-NE nutrient data are limited to surface (or “epilimnetic”) samples and were derived from federal, state, tribal, and non-profit agencies, as well as university researchers and citizen scientist data collections (Soranno et al. 2017). We collapsed lake nutrient data to long-term median values computed using all data from the summer stratified period (i.e. 15 June through 15 September) available for each lake between 2000 and 2010. For the lakes that met our selection criteria (see below) the median number of samples per lake was nine (range = 3-94) and the median number of years sampled was four (range = 2-10).
+We analyzed data on lake total nitrogen (TN) and total phosphorus (TP) concentrations from the LAGOS-NE data product \citep{soranno2017lagos}. The LAGOS-NE nutrient data are limited to surface (or “epilimnetic”) samples and were derived from federal, state, tribal, and non-profit agencies, as well as university researchers and citizen scientist data collections \citep{sorannoLAGOSNEMultiscaledGeospatial2017}. We collapsed lake nutrient data to long-term median values computed using all data from the summer stratified period (i.e. 15 June through 15 September) available for each lake between 2000 and 2010. For the lakes that met our selection criteria (see below) the median number of samples per lake was nine (range = 3-94) and the median number of years sampled was four (range = 2-10).
 
-Our first source for granular agricultural information was the 2010 Cropland Data Layer (CDL, USDA 2019), which we used to generate lake watershed and stream buffer estimates of the proportion of land cover due to specific crops such as corn and soybeans. We used the R package cdlTools to access CDL products (Chen 2018). We used the 2010 CDL data because this was the first year of high resolution (30 x 30m) CDL data collection that matched our lake nutrient data collection window. Because the CDL contains detailed coverage for dozens of crops, including rare crops with little to no coverage, we re-categorized CDL data based on Lark et al. (2015) to a more limited set of categories (Table A1). 
+Our first source for granular agricultural information was the 2010 Cropland Data Layer (CDL, \citealt{usda-nassNationalAgriculturalStatistics2019}), which we used to generate lake watershed and stream buffer estimates of the proportion of land cover due to specific crops such as corn and soybeans. We used the R package cdlTools to access CDL products \citep{chenToolsDownloadWork2018}. We used the 2010 CDL data because this was the first year of high resolution (30 x 30m) CDL data collection that matched our lake nutrient data collection window. Because the CDL contains detailed coverage for dozens of crops, including rare crops with little to no coverage, we re-categorized CDL data based on \citet{larkCroplandExpansionOutpaces2015} to a more limited set of categories (Table A1). 
 
-As a more granular representation of watershed agricultural land use, we measured the proportion of land cover in agricultural and “natural” land-uses in 100-m buffers of lake shorelines and streams for each lake watershed. We chose a 100-m buffer width because this width is inclusive of nearly all “riparian buffers” (Mayer et al. 2007). Here agricultural land-use is defined in the aggregate sense as the proportion of land used for agriculture in a lake’s watershed whereas “natural” land-uses include the sum of all non-agriculture and non-developed CDL classes. We identified the streams associated with each lake using the stream network extraction tool in the nhdR interface (Stachelek 2019) to the National Hydrography Network (USGS 2019). We compiled soil characteristics for each lake watershed using the Gridded Soil Survey Geographic Database (gSSURGO, USDA 2019) where we used the python package gssurgo (Stachelek 2019) to access gSSURGO  products. One such product was wetland potential, defined as the percentage of the soil grid that meets the criteria for hydric soils formed under conditions of saturation, flooding, or ponding long enough to develop anaerobic conditions but not so long as to be classified as a permanent waterbody (USDA 2019). Finally, we compiled mean annual nutrient inputs via fertilizer and manure to lake watersheds from 1982-2001 using county level data provided by Ruddy et al. (2006). We spatially aligned these county level estimates to lake watershed polygons provided by LAGOS-NE (Soranno and Cheruvelil 2017) using the area-weighted interpolation functions provided by the sf R package (Pebesma 2019). All of our data and data processing code are available at [Zenodo DOI].
+As a more granular representation of watershed agricultural land use, we measured the proportion of land cover in agricultural and “natural” land-uses in 100-m buffers of lake shorelines and streams for each lake watershed. We chose a 100-m buffer width because this width is inclusive of nearly all “riparian buffers” \citep{mayerMetaAnalysisNitrogenRemoval2007}. Here agricultural land-use is defined in the aggregate sense as the proportion of land used for agriculture in a lake’s watershed whereas “natural” land-uses include the sum of all non-agriculture and non-developed CDL classes. We identified the streams associated with each lake using the stream network extraction tool in the nhdR interface \citep{stachelekNhdRToolsWorking2019} to the National Hydrography Network \citep{usgsNationalHydrographyDataset2019}. We compiled soil characteristics for each lake watershed using the Gridded Soil Survey Geographic Database (gSSURGO, \citealt{soil2016gridded}) where we used the python package gssurgo \citep{stachelekGssurgoPythonToolbox2019} to access gSSURGO  products. One such product was wetland potential, defined as the percentage of the soil grid that meets the criteria for hydric soils formed under conditions of saturation, flooding, or ponding long enough to develop anaerobic conditions but not so long as to be classified as a permanent waterbody \citep{soil2016gridded}. Finally, we compiled mean annual nutrient inputs via fertilizer and manure to lake watersheds from 1982-2001 using county level data provided by \citet{ruddy2006county}. We spatially aligned these county level estimates to lake watershed polygons provided by LAGOS-NE \citep{LAGOSgis} using the area-weighted interpolation functions provided by the sf R package \citep{pebesma2018}. All of our data and data processing code are available at \href{https://doi.org/10.5281/zenodo.3754916}{doi:10.5281/zenodo.3754916}.
 
 ### Location information
 
-We restricted the lakes included in the study to those located within the footprint of LAGOS-NE which includes lakes located in 17 Northeastern and Midwest U.S. states (Soranno et al., 2017). We excluded lakes from our analysis if they had a surface area > 400 km2 or a maximum depth > 35 m. These removals resulted in exclusion of approximately 40 lakes which we regarded as outliers that would likely have undue influence on model results because such large and deep lakes are likely to respond differently to enrichment as a result of enhanced stratification. To ensure an adequate comparison between aggregate and granular measures of agriculture, we
-further limited lakes in our study to those with at least 10% of the total watershed area devoted to agricultural land-use and those that were sampled at least three times between 2000 and 2010. A total of 928 lakes met these selection criteria (Figure \ref{fig1}). Because we focused on lakes in agricultural watersheds, more than 35  percent of lakes in our study are considered eutrophic to hypereutrophic using chlorophyll a as a diagnostic e versus only 15 percent for all lakes from Soranno et al. (2017) located within our study extent (Figure A3). For the regional terms in our models, we used hydrologic regions at the subbasin (i.e. HUC4) level because this level was small enough to give a sense of overall spatial variation but large enough to encompass sufficient numbers of lakes to estimate within region variance.
+We restricted the lakes included in the study to those located within the footprint of LAGOS-NE which includes lakes located in 17 Northeastern and Midwest U.S. states \citep{sorannoLAGOSNEMultiscaledGeospatial2017}. We excluded lakes from our analysis if they had a surface area > 400 km2 or a maximum depth > 35 m. These removals resulted in exclusion of approximately 40 lakes which we regarded as outliers that would likely have undue influence on model results because such large and deep lakes are likely to respond differently to enrichment as a result of enhanced stratification. To ensure an adequate comparison between aggregate and granular measures of agriculture, we
+further limited lakes in our study to those with at least 10% of the total watershed area devoted to agricultural land-use and those that were sampled at least three times between 2000 and 2010. A total of 928 lakes met these selection criteria (Figure \ref{fig1}). Because we focused on lakes in agricultural watersheds, more than 35  percent of lakes in our study are considered eutrophic to hypereutrophic using chlorophyll a as a diagnostic versus only 15 percent for all lakes from \citet{sorannoLAGOSNEMultiscaledGeospatial2017} located within our study extent (Figure A3). For the regional terms in our models, we used hydrologic regions at the subbasin (i.e. HUC4) level because this level was small enough to give a sense of overall spatial variation but large enough to encompass sufficient numbers of lakes to estimate within region variance.
 
 \setcounter{figure}{0}
 \begin{figure*}
@@ -180,17 +180,17 @@ y_i = N(\alpha_{j(i)} + \beta_1 &* X_{1i}...\beta_n * X_{ni} + \gamma_{1j(i)} * 
 
 \noindent where yi is either TN or TP concentration for lake i, and $\beta$ are “global” (i.e. fixed effect) coefficients. This set of global coefficients included estimates for watershed soil characteristics, near-stream land-use, as well as fertilizer and manure inputs for each lake (Xi). Whereas $\beta$ coefficients were estimated as fixed effects, $\gamma$ coefficients and $\alpha$ intercepts were estimated as varying (i.e. random) slopes and intercepts respectively among m hydrologic regions j on watershed land-use (Wij). Region specific intercepts $\alpha$ and $\gamma$ slopes were assumed to come from a multivariate normal distribution (MVN) where $\mu_\alpha$ and $\mu_{\gamma1}$ are their respective grand mean (i.e., population level) estimates. We tested a variety of watershed land-use types for Wij, including both granular and more aggregate measures of agricultural activity. Our only aggregate measure of agricultural activity was agricultural land-use whereas we used several granular measures of agricultural activity. These included both detailed measures of watershed land-use such as corn and soybean cover as well as more detailed measures of nutrient inputs and near-stream land-use (Table \ref{table1}). We included measures of both N and P inputs in both N and P models because of the possibility for stoichiometric interaction. Given our regularization scheme (i.e. our use of “horseshoe priors” described below) there was little reason to exclude P inputs from N models (and vice versa) because unless P inputs are strongly related to lake TN concentration, their coefficient will be forced close to zero.
 
-All models had the same set of fixed effect coefficients while each individual model used a single different watershed land-use variable as a random effect. This modelling strategy is supported by our view that watershed land-use is an indirect proxy (sensu Burcher et al. 2007, Hayes et al. 2015, King et al. 2005) for other unquantifiable agricultural activities. Therefore, we expect the makeup of specific activities represented by this indirect measure to vary regionally. This contrasts with other predictor variables e like lake depth, where we have little evidence from prior studies that its effect on lake nutrient concentrations is spatially variable. Prior to model fitting, we examined the bivariate relationships between lake nutrient concentrations and all predictor variables using Pearson’s correlation coefficients (Figure A5) to determine the overall structure of the predictor dataset. We did not use the results of this exercise for building our model, performing model selection, or variable selection. For qualitative analysis of our model results, we classified predictor variables following Collins et al. (2017) into categories based on the dominant mechanism affecting lake nutrient concentrations, which includes nutrient inputs, nutrient transport, spatial configuration of land-use in stream buffers (Spatial config.), lake characteristics, and watershed land-use (LULC).
+All models had the same set of fixed effect coefficients while each individual model used a single different watershed land-use variable as a random effect. This modelling strategy is supported by our view that watershed land-use is an indirect proxy (sensu \citealt{burcherLandcoverCascadeRelationships2007,hayesClimateLandUse2015,kingSpatialConsiderationsLinking2005}) for other unquantifiable agricultural activities. Therefore, we expect the makeup of specific activities represented by this indirect measure to vary regionally. This contrasts with other predictor variables e like lake depth, where we have little evidence from prior studies that its effect on lake nutrient concentrations is spatially variable. Prior to model fitting, we examined the bivariate relationships between lake nutrient concentrations and all predictor variables using Pearson’s correlation coefficients (Figure A5) to determine the overall structure of the predictor dataset. We did not use the results of this exercise for building our model, performing model selection, or variable selection. For qualitative analysis of our model results, we classified predictor variables following \citet{collinsLakeNutrientStoichiometry2017} into categories based on the dominant mechanism affecting lake nutrient concentrations, which includes nutrient inputs, nutrient transport, spatial configuration of land-use in stream buffers (Spatial config.), lake characteristics, and watershed land-use (LULC).
 
-We fit all models in a Bayesian framework using the brms R package interface to the Stan statistical program (Bürkner et al., 2017; Stan Development Team, 2017). We used horseshoe shrinkage priors on all fixed effect coefficients to evaluate variable importance (Carvalho et al. 2010). We considered a response variable sensitive to a given predictor if the predictor’s 95% credible interval did not overlap 0. We standardized all predictor variables by subtracting the mean of each variable and dividing by their respective standard deviation so that model coefficients could be compared on roughly the same scale. As a result, the relative sensitivity of a response variable to a particular predictor is related to the relative magnitude of its coefficient estimate. We evaluated model fit of each watershed land-use variable (i.e., each model having one regionally varying coefficient) in two ways. First, we computed a Bayesian R2 following the method of Gelman et al. (2017) and second, we computed differences in expected log predictive density (ELPD) using the leave-one-out cross e validation routines provided by the loo R package and implemented in brms (Vehtari et al. 2017). The loo package uses leave-one-out cross validation to estimate overall model error by computing O the average error of models iteratively trained on all the data except for a single point. ELPD values have a similar interpretation to information criterion measures such as Akaike information criterion (AIC) or Watanabe-Akaike information criterion (WAIC) except that values are on a different scale (Gelman et al. 2013). Typically, models are considered to be different if they are separated by an AIC value of greater than 2 (Anderson and Burnham 2002), which is equivalent to an ELPD value of -1 (Gelman et al. 2013). We report differences in ELPD among models using the notation $\Delta$ELPD. We selected the model with the lowest absolute value ELPD as the “top-ranked” model for detailed reporting and discussion as this signifies the model with the lowest leave one out cross-validation error for N and P respectively. 
+We fit all models in a Bayesian framework using the brms R package interface to the Stan statistical program \citep{burkner2017brms, stan2017}. We used horseshoe shrinkage priors on all fixed effect coefficients to evaluate variable importance \citep{carvalhoHorseshoeEstimatorSparse2010}. We considered a response variable sensitive to a given predictor if the predictor’s 95% credible interval did not overlap 0. We standardized all predictor variables by subtracting the mean of each variable and dividing by their respective standard deviation so that model coefficients could be compared on roughly the same scale. As a result, the relative sensitivity of a response variable to a particular predictor is related to the relative magnitude of its coefficient estimate. We evaluated model fit of each watershed land-use variable (i.e., each model having one regionally varying coefficient) in two ways. First, we computed a Bayesian $R^2$ following the method of \citet{gelmanRsquaredBayesianRegression2017} and second, we computed differences in expected log predictive density (ELPD) using the leave-one-out cross e validation routines provided by the loo R package and implemented in brms \citep{vehtari2017practical}. The loo package uses leave-one-out cross validation to estimate overall model error by computing O the average error of models iteratively trained on all the data except for a single point. ELPD values have a similar interpretation to information criterion measures such as Akaike information criterion (AIC) or Watanabe-Akaike information criterion (WAIC) except that values are on a different scale \citep{gelmanUnderstandingPredictiveInformation2013}. Typically, models are considered to be different if they are separated by an AIC value of greater than 2 \citep{andersonAvoidingPitfallsWhen2002}, which is equivalent to an ELPD value of -1 \citep{gelmanUnderstandingPredictiveInformation2013}. We report differences in ELPD among models using the notation $\Delta$ELPD. We selected the model with the lowest absolute value ELPD as the “top-ranked” model for detailed reporting and discussion as this signifies the model with the lowest leave one out cross-validation error for N and P respectively. 
 
-We used the default settings of brms to generate posterior estimates using four chains of 4,000 iterations each with no thinning and discarding the first 1,000 iterations. We examined model fits to ensure that all models had acceptable convergence of MCMC chains and had approximately normal model residuals. We further tested for spatial correlation among model residuals using the spind R package (Carl et al. 2018). All of our code for model fitting and evaluation is available at [Zenodo DOI].
+We used the default settings of brms to generate posterior estimates using four chains of 4,000 iterations each with no thinning and discarding the first 1,000 iterations. We examined model fits to ensure that all models had acceptable convergence of MCMC chains and had approximately normal model residuals. We further tested for spatial correlation among model residuals using the spind R package \citep{carlSpindPackageAccount2018}. All of our code for model fitting and evaluation is available at \href{https://doi.org/10.5281/zenodo.3754916}{doi:10.5281/zenodo.3754916}.
 
 ## Results
 
 ### Effects of agriculture on lake nitrogen and phosphorus
 
-Lake characteristics (e.g., maximum depth and watershed to lake area ratio) along with measures of nutrient transport (e.g., baseflow) and near-stream agriculture were significant predictors in all lake N and P models that we fit. When we  compared among different models for each nutrient individually, we found that those with agricultural watershed O land-use (in the aggregate sense) were top-ranked (i.e., had the lowest absolute value leave-one-out cross validation score) for models of both TN and TP concentrations (Figure 2, Table 2). Although we observed no difference in the specific watershed land-use predictor used in each top-ranked model, we found differences in the extent to which each top-ranked model was substantially different from lower ranked models. For example, in the case of P, all models had nearly identical R2 (0.63) and the difference between the top-ranked model and second ranked model was modest ($\Delta$ELPD = 0.41). For N models, however, agricultural and corn land-use models had higher R2 (0.58) compared to other models and the difference between the top-ranked and second ranked model was more substantial ($\Delta$ELPD = 2.58, Figure 2, Table \ref{table1}).
+Lake characteristics (e.g., maximum depth and watershed to lake area ratio) along with measures of nutrient transport (e.g., baseflow) and near-stream agriculture were significant predictors in all lake N and P models that we fit. When we  compared among different models for each nutrient individually, we found that those with agricultural watershed O land-use (in the aggregate sense) were top-ranked (i.e., had the lowest absolute value leave-one-out cross validation score) for models of both TN and TP concentrations (Figure 2, Table 2). Although we observed no difference in the specific watershed land-use predictor used in each top-ranked model, we found differences in the extent to which each top-ranked model was substantially different from lower ranked models. For example, in the case of P, all models had nearly identical $R^2$ (0.63) and the difference between the top-ranked model and second ranked model was modest ($\Delta$ELPD = 0.41). For N models, however, agricultural and corn land-use models had higher $R^2$ (0.58) compared to other models and the difference between the top-ranked and second ranked model was more substantial ($\Delta$ELPD = 2.58, Figure 2, Table \ref{table1}).
 
 \begin{figure}
   \begin{center}
@@ -220,7 +220,7 @@ types of predictors that contributed significantly to the top-ranked N and P mod
 
 Although top-ranked N and P models shared some similarities in the type of predictors that contributed significantly to each model, the coefficients of these models differed in magnitude, and thus the top-ranked models varied in their sensitivity to specific predictors (Figure 3). For example, the top-ranked P model was more sensitive to lake characteristics, whereas the top-ranked N model was more sensitive to watershed land-use. Quantitatively, lake TP concentrations were more sensitive to maximum depth ($\beta_{depth}$: median = -0.39, SD = 0.04) compared to lake TN concentrations ($\beta_{depth}$: median = -0.14, SD = 0.04); whereas lake TN concentrations were more sensitive to watershed agriculture land-use ($\beta_{ag}$: median = 0.44, SD = 0.11) compared to lake TP concentrations ($\beta_{ag}$: median = 0.10, SD = 0.08). Finally, although we found that near-stream agriculture was associated with both higher TN and TP concentrations (i.e., a source-effect of near-stream agriculture), there was not a significant difference in the magnitude (i.e., sensitivity) of this coefficient between N ($\beta_{bufferag}$: median = 0.16, SD = 0.06) and P ($\beta_{bufferag}$: median = 0.12, SD = 0.06) models.
 
-No predictors in the nutrient input category appeared to be strongly related to either TN or TP concentrations. One explanation may be that these variables co-varied with watershed and near-stream land-use variables (Figure A5). In an attempt to further investigate this possibility, we fit alternative models excluding all land-use predictors. The results show that, at least in the case of N, removing these predictors e caused model variance to be apportioned from watershed and buffer land-use predictors to N input and P fertilizer predictors (Figure A4). However, this non-land-use N model had a relatively poor fit (R2 = 0.40) compared to the top-ranked model that included land-use as a predictor (R2 = 0.58).
+No predictors in the nutrient input category appeared to be strongly related to either TN or TP concentrations. One explanation may be that these variables co-varied with watershed and near-stream land-use variables (Figure A5). In an attempt to further investigate this possibility, we fit alternative models excluding all land-use predictors. The results show that, at least in the case of N, removing these predictors e caused model variance to be apportioned from watershed and buffer land-use predictors to N input and P fertilizer predictors (Figure A4). However, this non-land-use N model had a relatively poor fit ($R^2$ = 0.40) compared to the top-ranked model that included land-use as a predictor ($R^2$ = 0.58).
 
 ### Regional variation in agriculture sensitivity
 
