finish inline linking and typo fixes

--- a/manuscript/lagosag.bib
+++ b/manuscript/lagosag.bib
@@ -1591,6 +1591,15 @@
   keywords = {used}
 }
 
+@article{nakagaki2016estimates,
+  title = {Estimates of Subsurface Tile Drainage Extent for 12 {{Midwest}} States, 2012},
+  author = {Nakagaki, N and Wieczorek, ME},
+  year = {2016},
+  volume = {10},
+  pages = {F7W37TDP},
+  journal = {USGS Data Release. doi}
+}
+
 @article{norvellPhosphorusConnecticutLakes1979,
   title = {Phosphorus in {{Connecticut}} Lakes Predicted by Land Use},
   author = {Norvell, W. A. and Frink, C. R. and Hill, D. E.},
