--- a/tables/03_model_summary.Rmd
+++ b/tables/03_model_summary.Rmd
@@ -46,8 +46,9 @@ dt %>%
   # dplyr::select(-response) %>%
   dplyr::rename("$R^2$" = r2, 
                 "LOO-ELPD" = elpd_diff) %>%
-  knitr::kable(digits = 2, format = "markdown", caption = "TP Model R2", 
+  knitr::kable(digits = 2, format = "markdown", caption = "TP Model R2",
                row.names = FALSE)
+# knitr::kable(digits = 2, format = 'latex', align = c("lllll"), row.names = FALSE)
 ```
 
 \pagebreak
