print face package names

--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -182,9 +182,9 @@ y_i = N(\alpha_{j(i)} + \beta_1 &* X_{1i}...\beta_n * X_{ni} + \gamma_{1j(i)} * 
 
 All models had the same set of fixed effect coefficients while each individual model used a single different watershed land-use variable as a random effect. This modelling strategy is supported by our view that watershed land-use is an indirect proxy (sensu \citealt{burcherLandcoverCascadeRelationships2007,hayesClimateLandUse2015,kingSpatialConsiderationsLinking2005}) for other unquantifiable agricultural activities. Therefore, we expect the makeup of specific activities represented by this indirect measure to vary regionally. This contrasts with other predictor variables e like lake depth, where we have little evidence from prior studies that its effect on lake nutrient concentrations is spatially variable. Prior to model fitting, we examined the bivariate relationships between lake nutrient concentrations and all predictor variables using Pearson’s correlation coefficients (Figure A5) to determine the overall structure of the predictor dataset. We did not use the results of this exercise for building our model, performing model selection, or variable selection. For qualitative analysis of our model results, we classified predictor variables following \citet{collinsLakeNutrientStoichiometry2017} into categories based on the dominant mechanism affecting lake nutrient concentrations, which includes nutrient inputs, nutrient transport, spatial configuration of land-use in stream buffers (Spatial config.), lake characteristics, and watershed land-use (LULC).
 
-We fit all models in a Bayesian framework using the `brms` R package interface to the Stan statistical program \citep{burkner2017brms, stan2017}. We used horseshoe shrinkage priors on all fixed effect coefficients to evaluate variable importance \citep{carvalhoHorseshoeEstimatorSparse2010}. We considered a response variable sensitive to a given predictor if the predictor’s 95% credible interval did not overlap 0. We standardized all predictor variables by subtracting the mean of each variable and dividing by their respective standard deviation so that model coefficients could be compared on roughly the same scale. As a result, the relative sensitivity of a response variable to a particular predictor is related to the relative magnitude of its coefficient estimate. We evaluated model fit of each watershed land-use variable (i.e., each model having one regionally varying coefficient) in two ways. First, we computed a Bayesian $R^2$ following the method of \citet{gelmanRsquaredBayesianRegression2017} and second, we computed differences in expected log predictive density (ELPD) using the leave-one-out cross e validation routines provided by the `loo` R package and implemented in brms \citep{vehtari2017practical}. The `loo` package uses leave-one-out cross validation to estimate overall model error by computing the average error of models iteratively trained on all the data except for a single point. ELPD values have a similar interpretation to information criterion measures such as Akaike information criterion (AIC) or Watanabe-Akaike information criterion (WAIC) except that values are on a different scale \citep{gelmanUnderstandingPredictiveInformation2013}. Typically, models are considered to be different if they are separated by an AIC value of greater than 2 \citep{andersonAvoidingPitfallsWhen2002}, which is equivalent to an ELPD value of -1 \citep{gelmanUnderstandingPredictiveInformation2013}. We report differences in ELPD among models using the notation $\Delta$ELPD. We selected the model with the lowest absolute value ELPD as the “top-ranked” model for detailed reporting and discussion as this signifies the model with the lowest leave one out cross-validation error for N and P respectively. 
+We fit all models in a Bayesian framework using the `brms` R package interface to the Stan statistical program \citep{burkner2017brms, stan2017}. We used horseshoe shrinkage priors on all fixed effect coefficients to evaluate variable importance \citep{carvalhoHorseshoeEstimatorSparse2010}. We considered a response variable sensitive to a given predictor if the predictor’s 95% credible interval did not overlap 0. We standardized all predictor variables by subtracting the mean of each variable and dividing by their respective standard deviation so that model coefficients could be compared on roughly the same scale. As a result, the relative sensitivity of a response variable to a particular predictor is related to the relative magnitude of its coefficient estimate. We evaluated model fit of each watershed land-use variable (i.e., each model having one regionally varying coefficient) in two ways. First, we computed a Bayesian $R^2$ following the method of \citet{gelmanRsquaredBayesianRegression2017} and second, we computed differences in expected log predictive density (ELPD) using the leave-one-out cross e validation routines provided by the `loo` R package and implemented in `brms` \citep{vehtari2017practical}. The `loo` package uses leave-one-out cross validation to estimate overall model error by computing the average error of models iteratively trained on all the data except for a single point. ELPD values have a similar interpretation to information criterion measures such as Akaike information criterion (AIC) or Watanabe-Akaike information criterion (WAIC) except that values are on a different scale \citep{gelmanUnderstandingPredictiveInformation2013}. Typically, models are considered to be different if they are separated by an AIC value of greater than 2 \citep{andersonAvoidingPitfallsWhen2002}, which is equivalent to an ELPD value of -1 \citep{gelmanUnderstandingPredictiveInformation2013}. We report differences in ELPD among models using the notation $\Delta$ELPD. We selected the model with the lowest absolute value ELPD as the “top-ranked” model for detailed reporting and discussion as this signifies the model with the lowest leave one out cross-validation error for N and P respectively. 
 
-We used the default settings of brms to generate posterior estimates using four chains of 4,000 iterations each with no thinning and discarding the first 1,000 iterations. We examined model fits to ensure that all models had acceptable convergence of MCMC chains and had approximately normal model residuals. We further tested for spatial correlation among model residuals using the `spind` R package \citep{carlSpindPackageAccount2018}. All of our code for model fitting and evaluation is available at \href{https://doi.org/10.5281/zenodo.3754916}{doi:10.5281/zenodo.3754916}.
+We used the default settings of `brms` to generate posterior estimates using four chains of 4,000 iterations each with no thinning and discarding the first 1,000 iterations. We examined model fits to ensure that all models had acceptable convergence of MCMC chains and had approximately normal model residuals. We further tested for spatial correlation among model residuals using the `spind` R package \citep{carlSpindPackageAccount2018}. All of our code for model fitting and evaluation is available at \href{https://doi.org/10.5281/zenodo.3754916}{doi:10.5281/zenodo.3754916}.
 
 ## Results
 
